--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.5",
     "react-icons": "^5.5.0"
 
   },
