--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "tailwind-scrollbar-hide": "^2.0.0",
-    "zustand": "^5.0.5",
-    "react-icons": "^5.5.0"
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
