--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.77.2",
 
-    
+    "@tanstack/react-query": "^5.79.0",
+    "axios": "^1.9.0",
+
     "lucide-react": "^0.511.0",
    
 
@@ -21,13 +22,16 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "zustand": "^5.0.5",
-    "react-icons": "^5.5.0"
+
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
+    "zustand": "^5.0.5"
 
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tanstack/react-query-devtools": "^5.79.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
