--- a/package.json
+++ b/package.json
@@ -11,23 +11,18 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@tanstack/react-query": "^5.77.2",
-
-    
-    "lucide-react": "^0.511.0",
-   
-
     "@tanstack/react-query-devtools": "^5.77.2",
     "axios": "^1.9.0",
     "framer-motion": "^12.15.0",
+    "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
-    "zod": "^3.25.34",
-    "tailwind-scrollbar-hide": "^2.0.0",
-    "zustand": "^5.0.5",
     "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
     "tailwind-scrollbar-hide": "^2.0.0",
+    "zod": "^3.25.34",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
