--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query-devtools": "^5.77.2",
     "axios": "^1.9.0",
     "cookie": "^1.0.2",
+    "cookies-next": "^6.0.0",
     "framer-motion": "^12.15.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.511.0",
