--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@lottiefiles/react-lottie-player": "^3.6.0",
+    "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.79.0",
     "@tanstack/react-query-devtools": "^5.77.2",
@@ -38,6 +39,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@tanstack/react-query-devtools": "^5.79.0",
+    "@types/google.maps": "^3.58.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
