--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
     "tailwind-scrollbar-hide": "^2.0.0",
     "zod": "^3.25.34",
     "zustand": "^5.0.5"
