--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@lottiefiles/react-lottie-player": "^3.6.0",
-
     "@react-google-maps/api": "^2.20.6",
-
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.79.0",
     "@tanstack/react-query-devtools": "^5.77.2",
@@ -35,11 +33,8 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-spinners": "^0.17.0",
-
-    "tailwind-merge": "^3.3.1",
-
     "react-toastify": "^11.0.5",
-
+    "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar-hide": "^2.0.0",
     "zod": "^3.25.34",
     "zustand": "^5.0.5"
@@ -59,6 +54,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "postcss": "^8.5.3",
+    "run-parallel": "^1.2.0",
     "tailwindcss": "^4.1.7",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
