--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postbuild": "next-sitemap"
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -17,8 +16,6 @@
     "@tanstack/react-query": "^5.79.0",
     "@tanstack/react-query-devtools": "^5.77.2",
     "axios": "^1.9.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "cookies-next": "^6.0.0",
     "framer-motion": "^12.15.0",
@@ -26,7 +23,6 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
-    "next-sitemap": "^4.2.3",
     "openai": "^5.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -36,14 +32,12 @@
     "react-intersection-observer": "^9.16.0",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
-    "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar-hide": "^2.0.0",
     "zod": "^3.25.34",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/postcss": "^4",
     "@tanstack/react-query-devtools": "^5.79.0",
     "@types/google.maps": "^3.58.1",
@@ -56,9 +50,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "postcss": "^8.5.3",
-    "run-parallel": "^1.2.0",
     "tailwindcss": "^4.1.7",
-    "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
 }
